--- a/main.tex
+++ b/main.tex
@@ -14,79 +14,129 @@
 \usepackage{tabularx}
 \usepackage{booktabs}
 \usepackage[style=numeric,sorting=ynt]{biblatex}
+\addbibresource{references.bib}
+
+%---------------------------------------------------------------------------------
+% To force beamer use numbering in captions
+\setbeamertemplate{caption}[numbered]{}% Number float-like environments
+
+\setbeamertemplate{footline}[frame number]
+\setbeamertemplate{section in toc}[circle]
+\setbeamertemplate{blocks}[rounded][shadow=true]
+\setbeamercolor{block title}{bg=orange}
+\setbeamercolor{block body}{bg=lightgray}
+\setbeamercolor{headline}{bg=orange}
+\setbeamersize{text margin left=1cm,text margin right=1cm}
+
+\setbeamertemplate{headline}
+{%
+    \begin{beamercolorbox}{section in head/foot}
+        \vspace{2pt}\insertnavigation{\paperwidth}\vspace{2pt}
+    \end{beamercolorbox}
+}
 
 %---------------------------------------------------------------------------------
 \title{A Short Introduction to DetNet}
 \subtitle{}
 \author{Parham Alvani}
-\institute{
+\institute{%
         Computer Engineering Department\\
         Prof.\ Bahador Bakhshi
 }
 \date{\today}
+\titlegraphic{\includegraphics[height=50pt]{images/logo}}
 
 \begin{document}
 
 \makeatletter
-\setbeamertemplate{title page}{
-  \begin{minipage}[b][\paperheight]{\textwidth}
-    \begin{center}
-        \ifx\inserttitlegraphic\@empty\else\usebeamertemplate*{title graphic}\fi
-    \end{center}
-    \vfill%
-    \ifx\inserttitle\@empty\else\usebeamertemplate*{title}\fi
-    \ifx\insertsubtitle\@empty\else\usebeamertemplate*{subtitle}\fi
-    \usebeamertemplate*{title separator}
-    \ifx\beamer@shortauthor\@empty\else\usebeamertemplate*{author}\fi
-    \ifx\insertdate\@empty\else\usebeamertemplate*{date}\fi
-    \ifx\insertinstitute\@empty\else\usebeamertemplate*{institute}\fi
-    \vspace*{5mm}
-    \begin{center}
-        \includegraphics[width=1cm]{images/logo}
-    \end{center}
-    \vfill
-    \vspace*{1mm}
-  \end{minipage}
+\setbeamertemplate{title page}{%
+        \begin{minipage}[b][\paperheight]{\textwidth}
+                \begin{flushright}
+                        \ifx\inserttitlegraphic\empty\else\usebeamertemplate*{title graphic}\fi
+                \end{flushright}
+                \vfill%
+                \ifx\inserttitle\empty\else\usebeamertemplate*{title}\fi
+                \ifx\insertsubtitle\empty\else\usebeamertemplate*{subtitle}\fi
+                \usebeamertemplate*{title separator}
+                \ifx\beamershortauthor\empty\else\usebeamertemplate*{author}\fi
+                \ifx\insertdate\empty\else\usebeamertemplate*{date}\fi
+                \ifx\insertinstitute\empty\else\usebeamertemplate*{institute}\fi
+                \vfill
+                \vspace*{1mm}
+        \end{minipage}
 }
 
-\setbeamertemplate{title}{
-  \linespread{1.0}%
-  \inserttitle%
-  \par%
-  \vspace*{0.5em}
+\setbeamertemplate{title}{%
+        \linespread{1.0}%
+        \inserttitle%
+        \par%
+        \vspace*{0.5em}
 }
-\setbeamertemplate{subtitle}{
-  \insertsubtitle%
-  \par%
-  \vspace*{0.5em}
+\setbeamertemplate{subtitle}{%
+        \insertsubtitle%
+        \par%
+        \vspace*{0.5em}
 }
 
-\setbeamertemplate{section page}{
-    \begin{center}
-        \insertsectionnumber. \insertsection
-    \end{center}
-    \usebeamertemplate*{title separator}
+\setbeamertemplate{section page}{%
+        \begin{center}
+                \insertsectionnumber. \insertsection%
+        \end{center}
+        \usebeamertemplate*{title separator}
 }
 \makeatother
 
 %------------------------------------------
 % Title frame (0)
 %------------------------------------------
-{
-\setbeamertemplate{headline}[default]
-\begin{frame}
-    \titlepage{}
-\end{frame}
+{%
+        \setbeamertemplate{headline}[default]
+        \begin{frame}
+                \titlepage%
+        \end{frame}
 }
 
 %-------------------------------------------------------------------------------
 \begin{frame}{Table of Contents}
-    \tableofcontents
+        \tableofcontents
 \end{frame}
 
 %-------------------------------------------------------------------------------
 \begin{frame}{}
-    \section{Introduction}
+        \section{Introduction}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+\begin{frame}{}
+        \begin{block}{Goal}
+                \par
+                Establishes multi-hop paths for characterized flows with deterministic properties:
+                \begin{itemize}
+                        \item Latency Guarantess
+                        \item Ultra-Low Packet Loss
+                \end{itemize}
+        \end{block}
+
+        \begin{block}{Layers}
+                \par
+                DetNet operates at the IP layer and delivers service over lower-layer technologies such as MPLS and Time-Sensitive Networking (TSN).
+        \end{block}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+\begin{frame}{Techniques}
+        \par
+        Techniquies for providing DetNet Qualities of Service:~\cite{Finn2019}
+        \begin{itemize}
+                \item Resource Allocation
+                \item Service Protection
+                \item Explicit Routes
+        \end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+\begin{frame}{}
+        \printbibliography%
 \end{frame}
 
 \end{document}
