--- a/main.tex
+++ b/main.tex
@@ -30,9 +30,9 @@
 
 \setbeamertemplate{headline}
 {%
-    \begin{beamercolorbox}{section in head/foot}
-        \vspace{2pt}\insertnavigation{\paperwidth}\vspace{2pt}
-    \end{beamercolorbox}
+  \begin{beamercolorbox}{section in head/foot}
+    \vspace{2pt}\insertnavigation{\paperwidth}\vspace{2pt}
+  \end{beamercolorbox}
 }
 
 %---------------------------------------------------------------------------------
@@ -40,8 +40,8 @@
 \subtitle{}
 \author{Parham Alvani}
 \institute{%
-        Computer Engineering Department\\
-        Prof.\ Bahador Bakhshi
+  Computer Engineering Department\\
+  Prof.\ Bahador Bakhshi
 }
 \date{\today}
 \titlegraphic{\includegraphics[height=50pt]{images/logo}}
@@ -50,39 +50,39 @@
 
 \makeatletter
 \setbeamertemplate{title page}{%
-        \begin{minipage}[b][\paperheight]{\textwidth}
-                \begin{flushright}
-                        \ifx\inserttitlegraphic\empty\else\usebeamertemplate*{title graphic}\fi
-                \end{flushright}
-                \vfill%
-                \ifx\inserttitle\empty\else\usebeamertemplate*{title}\fi
-                \ifx\insertsubtitle\empty\else\usebeamertemplate*{subtitle}\fi
-                \usebeamertemplate*{title separator}
-                \ifx\beamershortauthor\empty\else\usebeamertemplate*{author}\fi
-                \ifx\insertdate\empty\else\usebeamertemplate*{date}\fi
-                \ifx\insertinstitute\empty\else\usebeamertemplate*{institute}\fi
-                \vfill
-                \vspace*{1mm}
-        \end{minipage}
+  \begin{minipage}[b][\paperheight]{\textwidth}
+    \begin{flushright}
+      \ifx\inserttitlegraphic\empty\else\usebeamertemplate*{title graphic}\fi
+    \end{flushright}
+    \vfill%
+    \ifx\inserttitle\empty\else\usebeamertemplate*{title}\fi
+    \ifx\insertsubtitle\empty\else\usebeamertemplate*{subtitle}\fi
+    \usebeamertemplate*{title separator}
+    \ifx\beamershortauthor\empty\else\usebeamertemplate*{author}\fi
+    \ifx\insertdate\empty\else\usebeamertemplate*{date}\fi
+    \ifx\insertinstitute\empty\else\usebeamertemplate*{institute}\fi
+    \vfill
+    \vspace*{1mm}
+  \end{minipage}
 }
 
 \setbeamertemplate{title}{%
-        \linespread{1.0}%
-        \inserttitle%
-        \par%
-        \vspace*{0.5em}
+  \linespread{1.0}%
+  \inserttitle%
+  \par%
+  \vspace*{0.5em}
 }
 \setbeamertemplate{subtitle}{%
-        \insertsubtitle%
-        \par%
-        \vspace*{0.5em}
+  \insertsubtitle%
+  \par%
+  \vspace*{0.5em}
 }
 
 \setbeamertemplate{section page}{%
-        \begin{center}
-                \insertsectionnumber. \insertsection%
-        \end{center}
-        \usebeamertemplate*{title separator}
+  \begin{center}
+    \insertsectionnumber. \insertsection%
+  \end{center}
+  \usebeamertemplate*{title separator}
 }
 \makeatother
 
@@ -90,53 +90,60 @@
 % Title frame (0)
 %------------------------------------------
 {%
-        \setbeamertemplate{headline}[default]
-        \begin{frame}
-                \titlepage%
-        \end{frame}
+  \setbeamertemplate{headline}[default]
+  \begin{frame}
+    \titlepage%
+  \end{frame}
 }
 
 %-------------------------------------------------------------------------------
 \begin{frame}{Table of Contents}
-        \tableofcontents
+  \tableofcontents
 \end{frame}
 
 %-------------------------------------------------------------------------------
 \begin{frame}{}
-        \section{Introduction}
+  \section{Introduction}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 \begin{frame}{}
-        \begin{block}{Goal}
-                \par
-                Establishes multi-hop paths for characterized flows with deterministic properties:
-                \begin{itemize}
-                        \item Latency Guarantess
-                        \item Ultra-Low Packet Loss
-                \end{itemize}
-        \end{block}
+  \begin{block}{Goal}
+    \par
+    Establishes multi-hop paths for characterized flows with deterministic properties:
+    \begin{itemize}
+      \item Latency Guarantess
+      \item Ultra-Low Packet Loss
+    \end{itemize}
+  \end{block}
 
-        \begin{block}{Layers}
-                \par
-                DetNet operates at the IP layer and delivers service over lower-layer technologies such as MPLS and Time-Sensitive Networking (TSN).
-        \end{block}
+  \begin{block}{Layers}
+    \par
+    DetNet operates at the IP layer and delivers service over lower-layer technologies such as MPLS and Time-Sensitive Networking (TSN).
+  \end{block}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 \begin{frame}{Techniques}
-        \par
-        Techniquies for providing DetNet Qualities of Service:~\cite{Finn2019}
-        \begin{itemize}
-                \item Resource Allocation
-                \item Service Protection
-                \item Explicit Routes
-        \end{itemize}
+  \par
+  Techniquies for providing DetNet Qualities of Service:~\cite{Finn2019}
+  \begin{itemize}
+    \item Resource Allocation
+      \begin{itemize}
+        \item Assigning Resources
+      \end{itemize}
+    \item Service Protection
+      \begin{itemize}
+        \item Packet Replication and Elimination
+        \item Packet Encoding
+      \end{itemize}
+    \item Explicit Routes
+  \end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 \begin{frame}{}
-        \printbibliography%
+  \printbibliography%
 \end{frame}
 
 \end{document}
