feat: Update Slides Structure

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,6 @@
 \usepackage{amsmath}
 %\usefonttheme[onlymath]{serif} %Change the math font
 
-\usepackage{multirow}
 \usepackage{tabularx}
 \usepackage{booktabs}
 \usepackage[style=numeric,sorting=ynt]{biblatex}
@@ -105,7 +104,7 @@
 % Title frame (0)
 %------------------------------------------
 {%
-  \setbeamertemplate{headline}[default]
+  \setbeamertemplate{footline}{}
   \begin{frame}
     \titlepage%
   \end{frame}
@@ -153,6 +152,9 @@
     \item Explicit Routes
   \end{itemize}
 \end{frame}
+
+%-------------------------------------------------------------------------------
+\section{References}
 
 %-------------------------------------------------------------------------------
 \begin{frame}{}
