feat: Add Objectives

--- a/main.tex
+++ b/main.tex
@@ -272,6 +272,21 @@
   \end{frame}
 
   %-------------------------------------------------------------------------------
+  \begin{frame}{اهداف}
+    \begin{itemize}\RTList{}
+      \justifying
+      \item هزینه
+      \begin{itemize}\RTList{}
+        \justifying
+        \item مساله‌ی پایه‌ای در بحث تخصیص منابع
+        \item وجود جواب با برآورده شدن محدودیت‌های نودها و لینک‌ها
+        \item \lr{NP-Hard}
+      \end{itemize}
+      \item تاخیر
+    \end{itemize}
+  \end{frame}
+
+  %-------------------------------------------------------------------------------
   \section{مراجع}
 
   %-------------------------------------------------------------------------------
