feat: Add New Reference

--- a/references.bib
+++ b/references.bib
@@ -7,3 +7,17 @@
   author = {N. Finn and P. Thubert and B. Varga and J. Farkas},
   title = {Deterministic Networking Architecture}
 }
+
+@article{Yang2021,
+  doi = {10.1109/tpds.2020.3017001},
+  url = {https://doi.org/10.1109/tpds.2020.3017001},
+  year = {2021},
+  month = feb,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {32},
+  number = {2},
+  pages = {295--314},
+  author = {Song Yang and Fan Li and Stojan Trajanovski and Ramin Yahyapour and Xiaoming Fu},
+  title = {Recent Advances of Resource Allocation in Network Function Virtualization},
+  journal = {{IEEE} Transactions on Parallel and Distributed Systems}
+}
