feat: Add References

--- a/main.tex
+++ b/main.tex
@@ -317,7 +317,9 @@
 
 	%-------------------------------------------------------------------------------
 	\begin{frame}{}
+		\begin{latin}
 		\printbibliography%
+		\end{latin}
 	\end{frame}
 
 \end{persian}
