--- a/references.bib
+++ b/references.bib
@@ -21,3 +21,17 @@
   title = {Recent Advances of Resource Allocation in Network Function Virtualization},
   journal = {{IEEE} Transactions on Parallel and Distributed Systems}
 }
+
+@article{Qu2016,
+  doi = {10.1109/tcomm.2016.2580150},
+  url = {https://doi.org/10.1109/tcomm.2016.2580150},
+  year = {2016},
+  month = sep,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {64},
+  number = {9},
+  pages = {3746--3758},
+  author = {Long Qu and Chadi Assi and Khaled Shaban},
+  title = {Delay-Aware Scheduling and Resource Optimization With Network Function Virtualization},
+  journal = {{IEEE} Transactions on Communications}
+}
