feat: Add New Related Work

--- a/main.tex
+++ b/main.tex
@@ -50,9 +50,9 @@
 
 \setbeamertemplate{headline}
 {
-    \begin{beamercolorbox}{section in head/foot}
-        \vspace{2pt}\insertnavigation{\paperwidth}\vspace{2pt}
-    \end{beamercolorbox}
+		\begin{beamercolorbox}{section in head/foot}
+				\vspace{2pt}\insertnavigation{\paperwidth}\vspace{2pt}
+		\end{beamercolorbox}
 }
   
 %---------------------------------------------------------------------------------
@@ -61,19 +61,19 @@
 
 \setbeamertemplate{footline}
 {%
-  \leavevmode%
-  \hbox{%
-    \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{author in head/foot}%
-      \usebeamerfont{author in head/foot}\insertshortauthor%
-    \end{beamercolorbox}%
-    \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{title in head/foot}%
-      \usebeamerfont{title in head/foot}\insertshorttitle%
-    \end{beamercolorbox}%
-    \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,right]{date in head/foot}%
-      \usebeamerfont{date in head/foot}\insertsection\hspace*{2em}
-      \insertframenumber{} / \inserttotalframenumber\hspace*{2ex}
-    \end{beamercolorbox}
-  }%
+	\leavevmode%
+	\hbox{%
+		\begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{author in head/foot}%
+			\usebeamerfont{author in head/foot}\insertshortauthor%
+		\end{beamercolorbox}%
+		\begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{title in head/foot}%
+			\usebeamerfont{title in head/foot}\insertshorttitle%
+		\end{beamercolorbox}%
+		\begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,right]{date in head/foot}%
+			\usebeamerfont{date in head/foot}\insertsection\hspace*{2em}
+			\insertframenumber{} / \inserttotalframenumber\hspace*{2ex}
+		\end{beamercolorbox}
+	}%
 }
 \setbeamertemplate{section in toc}[circle]
 \setbeamertemplate{blocks}[rounded][shadow=true]
@@ -86,8 +86,8 @@
 \subtitle{}
 \author{پرهام الوانی}
 \institute{%
-    دانشکده مهندسی کامپیوتر\\
-    دکتر بهادر بخشی
+		دانشکده مهندسی کامپیوتر\\
+		دکتر بهادر بخشی
 }
 \date{\today}
 \titlegraphic{\vspace{4.5cm}\flushleft\includegraphics[height=50pt]{images/logo}}
@@ -148,17 +148,17 @@
 		\begin{itemize}\RTList{}
 			\justifying
 			\item
-			      یک سرویس شبکه به صورت تعدادی
-			      \textcolor{orange}{کارکرد مشخص}
-			      که ترافیک با
-			      \textcolor{orange}{ترتیب مشخصی}
-			      از آن ها عبور می‌کند، تعریف می‌شود.
+						یک سرویس شبکه به صورت تعدادی
+						\textcolor{orange}{کارکرد مشخص}
+						که ترافیک با
+						\textcolor{orange}{ترتیب مشخصی}
+						از آن ها عبور می‌کند، تعریف می‌شود.
 			\item
-			      کارکردهای شبکه به صورت سخت‌افزار و نرم‌افزار اختصاصی تهیه شده
-			      از سازندگان مختلف استفاده می‌شوند.
+						کارکردهای شبکه به صورت سخت‌افزار و نرم‌افزار اختصاصی تهیه شده
+						از سازندگان مختلف استفاده می‌شوند.
 			\item
-			      کارکردها باید در \textcolor{green}{مکان} مناسب در شبکه قرار گیرند و ترافیک به سمت
-			      آن‌ها \textcolor{green}{هدایت} شود.
+						کارکردها باید در \textcolor{green}{مکان} مناسب در شبکه قرار گیرند و ترافیک به سمت
+						آن‌ها \textcolor{green}{هدایت} شود.
 		\end{itemize}
 	\end{frame}
 
@@ -167,19 +167,19 @@
 		\begin{itemize}\RTList{}
 			\justifying
 			\item
-			      افزایش نیازمندی به سرویس‌های
-			      \textcolor{orange}{متنوع}
-			      با
-			      \textcolor{green}{عمرکوتاه}
-			      و
-			      \textcolor{cyna}{نرخ بالای ترافیک}
-			      \begin{itemize}\RTList{}
-				      \item خریداری، انبارداری و استقرار سخت‌افزارهای اختصاصی
-				      \item افزایش هزینه‌های خرید، آموزش و انبارداری
-				      \item کاهش فضای فیزیکی
-				      \item سربار آموزش کارکنان
-				      \item محدودیت نوآوری در سخت‌افزار و سرویس
-			      \end{itemize}
+						افزایش نیازمندی به سرویس‌های
+						\textcolor{orange}{متنوع}
+						با
+						\textcolor{green}{عمرکوتاه}
+						و
+						\textcolor{cyna}{نرخ بالای ترافیک}
+						\begin{itemize}\RTList{}
+							\item خریداری، انبارداری و استقرار سخت‌افزارهای اختصاصی
+							\item افزایش هزینه‌های خرید، آموزش و انبارداری
+							\item کاهش فضای فیزیکی
+							\item سربار آموزش کارکنان
+							\item محدودیت نوآوری در سخت‌افزار و سرویس
+						\end{itemize}
 		\end{itemize}
 		\begin{block}{}
 			\centering
@@ -195,10 +195,10 @@
 			\item ترافیک کاربر باید از تعدادی کارکرد شبکه به ترتیب معینی عبور کند.
 			\item کارکردها به صورت سخت‌افزاری به یکدیگر متصل هستند و ترافیک با استفاده از جداول مسیریابی به سمت آن‌ها هدایت می‌شود.
 			\item نیاز به تغییر همبندی سریع و یا مکان کارکردها برای سرویس‌دهی بهتر
-			      \begin{itemize}\RTList{}
-				      \item استقرار و تغییر ترتیب کارکردها دشوار است
-				      \item امکان رخدادن خطاهای متعدد
-			      \end{itemize}
+						\begin{itemize}\RTList{}
+							\item استقرار و تغییر ترتیب کارکردها دشوار است
+							\item امکان رخدادن خطاهای متعدد
+						\end{itemize}
 		\end{itemize}
 		\begin{block}{}
 			\centering
@@ -212,16 +212,16 @@
 		\begin{itemize}\RTList{}
 			\justifying
 			\item مجازی‌سازی کارکردهای شبکه
-			      \begin{itemize}\RTList{}
-				      \item اواخر سال ۲۰۱۲، \lr{ETSI NFV ISG} توسط هفت اپراتور جهانی شبکه تأسیس شد.
-				      \item اکنون بیش از 250 سازمان با آن همکاری می‌کنند.
-				      \item اجرای کارکردها بر روی سرورهای استاندارد با توان بالا به وسیله مجازی‌سازی کارکردها
-				            \begin{itemize}\RTList{}
-					            \item کاهش نیاز به تجهیزات سخت‌افزاری خاص منظوره
-					            \item اشتراک گذاری منابع بین کارکرد‌ها
-					            \item کاهش هزینه‌های تجهیزات و مصرف انرژی از طریق تجمیع کارکردها
-				            \end{itemize}
-			      \end{itemize}
+						\begin{itemize}\RTList{}
+							\item اواخر سال ۲۰۱۲، \lr{ETSI NFV ISG} توسط هفت اپراتور جهانی شبکه تأسیس شد.
+							\item اکنون بیش از 250 سازمان با آن همکاری می‌کنند.
+							\item اجرای کارکردها بر روی سرورهای استاندارد با توان بالا به وسیله مجازی‌سازی کارکردها
+										\begin{itemize}\RTList{}
+											\item کاهش نیاز به تجهیزات سخت‌افزاری خاص منظوره
+											\item اشتراک گذاری منابع بین کارکرد‌ها
+											\item کاهش هزینه‌های تجهیزات و مصرف انرژی از طریق تجمیع کارکردها
+										\end{itemize}
+						\end{itemize}
 		\end{itemize}
 	\end{frame}
 
@@ -230,11 +230,11 @@
 		\begin{itemize}\RTList{}
 			\justifying
 			\item زنجیره‌سازی کارکرد سرویس
-			      \begin{itemize}\RTList{}
-				      \item امکان تعریف زنجیره کارکردها به صورت پویا و بدون تغییر در زیرساخت فیزیکی
-				      \item قابل اجرا بر بستر \textcolor{green}{شبکه‌های سنتی} یا \textcolor{orange}{نرم‌افزار بنیان}
-				      \item \lr{RFC 7665}
-			      \end{itemize}
+						\begin{itemize}\RTList{}
+							\item امکان تعریف زنجیره کارکردها به صورت پویا و بدون تغییر در زیرساخت فیزیکی
+							\item قابل اجرا بر بستر \textcolor{green}{شبکه‌های سنتی} یا \textcolor{orange}{نرم‌افزار بنیان}
+							\item \lr{RFC 7665}
+						\end{itemize}
 		\end{itemize}
 	\end{frame}
 
@@ -274,17 +274,17 @@
 		\begin{itemize}\RTList{}
 			\justifying
 			\item
-			      جایگذاری کارکردهای مجازی شبکه به همراه مسیریابی ترافیک\\
-			      \begin{center}\footnotesize\lr{VPTR: VNF Placement and Traffic Routing}\end{center}
+						جایگذاری کارکردهای مجازی شبکه به همراه مسیریابی ترافیک\\
+						\begin{center}\footnotesize\lr{VPTR: VNF Placement and Traffic Routing}\end{center}
 			\item
-			      جایگذاری کارکردهای مجازی شبکه\\
-			      \begin{center}\footnotesize\lr{VNFP: VNF Placement}\end{center}
+						جایگذاری کارکردهای مجازی شبکه\\
+						\begin{center}\footnotesize\lr{VNFP: VNF Placement}\end{center}
 			\item
-			      مسیریابی ترافیک\\
-			      \begin{center}\footnotesize\lr{TRR: Traffic Routing}\end{center}
+						مسیریابی ترافیک\\
+						\begin{center}\footnotesize\lr{TRR: Traffic Routing}\end{center}
 			\item
-			      بازاستقرار و تثبیت کارکردهای مجازی شبکه\\
-			      \begin{center}\footnotesize\lr{VRC: VNF Redeployment and Consolidation}\end{center}
+						بازاستقرار و تثبیت کارکردهای مجازی شبکه\\
+						\begin{center}\footnotesize\lr{VRC: VNF Redeployment and Consolidation}\end{center}
 		\end{itemize}
 	\end{frame}
 
@@ -293,22 +293,22 @@
 		\begin{itemize}\RTList{}
 			\justifying
 			\item هزینه
-			      \begin{itemize}\RTList{}
-				      \item مساله‌ی پایه‌ای در بحث تخصیص منابع
-				      \item وجود جواب با برآورده شدن محدودیت‌های نودها و لینک‌ها
-				      \item \lr{NP-Hard}
-			      \end{itemize}
+						\begin{itemize}\RTList{}
+							\item مساله‌ی پایه‌ای در بحث تخصیص منابع
+							\item وجود جواب با برآورده شدن محدودیت‌های نودها و لینک‌ها
+							\item \lr{NP-Hard}
+						\end{itemize}
 			\item \textcolor{green}{کیفیت سرویس}
-			      \begin{itemize}\RTList{}
-				      \item \textcolor{orange}{تاخیر}
+						\begin{itemize}\RTList{}
+							\item \textcolor{orange}{تاخیر}
 						\begin{itemize}\RTList{}
 							\item انتشار
 							\item انتقال
 							\item صف
 							\item پردازش
 						\end{itemize}
-				      \item دسترسی پذیری
-			      \end{itemize}
+							\item دسترسی پذیری
+						\end{itemize}
 		\end{itemize}
 	\end{frame}
 
@@ -316,13 +316,23 @@
 	\section{مرور ادبیات}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{\cite{Qu2016}}
+	\begin{frame}{مرجع \cite{Qu2016}}
 		\begin{itemize}\RTList{}
 			\justifying
 			\item مساله‌ی زمان‌بندی سرویس‌های شبکه
 			\item سرویس‌های شبکه در قالب تعداد کارکرد مجازی با عمرمحدود
 			\item کارکردهای مجازی شبکه به صورت \lr{store-and-foward} عمل می‌کنند.
 			\item تاخیر انتقال و تاخیر پردازش
+			\item این مقاله محدودیت پردازش برای نودها و ظرفیت برای لینک‌ها را در نظر گرفته است.
+			\item کارکردها می‌توانند میزان جریان عبوری را تغییر دهند. مثلا دیوار آتش می‌تواند بسته‌ها را عبور ندهد.
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{مرجع \cite{Li2017}}
+		\begin{itemize}\RTList{}
+			\justifying
+				\item ارائه‌ی یک چهارچوب مدیریتی براساس مدل تاخیر ارائه شده
 		\end{itemize}
 	\end{frame}
 
