--- a/references.bib
+++ b/references.bib
@@ -35,3 +35,16 @@
   title = {Delay-Aware Scheduling and Resource Optimization With Network Function Virtualization},
   journal = {{IEEE} Transactions on Communications}
 }
+
+@article{Li2017,
+  doi = {10.1016/j.jnca.2016.10.021},
+  url = {https://doi.org/10.1016/j.jnca.2016.10.021},
+  year = {2017},
+  month = jan,
+  publisher = {Elsevier {BV}},
+  volume = {78},
+  pages = {253--266},
+  author = {Qing Li and Yong Jiang and Pengfei Duan and Mingwei Xu and Xi Xiao},
+  title = {Quokka: Latency-Aware Middlebox Scheduling with dynamic resource allocation},
+  journal = {Journal of Network and Computer Applications}
+}
