feat: Add New References

--- a/main.tex
+++ b/main.tex
@@ -316,9 +316,9 @@
 	\section{مرور ادبیات}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{مرجع \cite{Qu2016}}
+	\begin{frame}{مرجع~\cite{Qu2016}}
 		\begin{itemize}\RTList{}
-			\justifying
+			\justifying%
 			\item مساله‌ی زمان‌بندی سرویس‌های شبکه
 			\item سرویس‌های شبکه در قالب تعداد کارکرد مجازی با عمرمحدود
 			\item کارکردهای مجازی شبکه به صورت \lr{store-and-foward} عمل می‌کنند.
@@ -329,10 +329,42 @@
 	\end{frame}
 
 	%-------------------------------------------------------------------------------
-	\begin{frame}{مرجع \cite{Li2017}}
+	\begin{frame}{مرجع~\cite{Li2017}}
 		\begin{itemize}\RTList{}
-			\justifying
+				\justifying%
 				\item ارائه‌ی یک چهارچوب مدیریتی براساس مدل تاخیر ارائه شده
+				\item تاخیر پردازش برای تعداد مشخصی نمونه از کارکرد
+				\item دسته‌بندی کارکردها
+				\begin{itemize}\RTList{}
+						\item وابسته به اندازه بسته (\lr{exponential})
+						\item مستقل از اندازه بسته (\lr{deterministic})
+				\end{itemize}
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{مرجع~\cite{Yang2019}}
+		\begin{itemize}\RTList{}
+				\justifying%
+				\item تاخیر انتقال و تاخیر پردازش
+				\item در نظر گرفتن زنجیره‌های مرتب جزئی و تاثیر آن‌ها بر تاخیر
+				\item قطعه قطعه کردن زنجیره‌های مرتب جزئی برای تبدیل آن‌ها به تعدادی زنجیره مرتب کامل
+		\end{itemize}
+	\end{frame}
+
+	%-------------------------------------------------------------------------------
+	\begin{frame}{مرجع~\cite{Huang2019}}
+		\begin{itemize}\RTList{}
+				\justifying%
+				\item تاخیر انتقال ثابت در نظر گرفته شده است.
+				\item زنجیره‌ها نیازمندی تاخیر انتها به انتها دارند.
+		  		\item مساله‌ی بهینه‌سازی چند دوره‌ای
+				\item به اشتراک گذاری نمونه‌ها
+				\item گسترش عرضی و طولی
+				\item عدم توانایی در نظر گرفتن همه این شرایط در مساله‌ی بهینه‌سازی
+
+
+
 		\end{itemize}
 	\end{frame}
 
