--- a/references.bib
+++ b/references.bib
@@ -48,3 +48,25 @@
   title = {Quokka: Latency-Aware Middlebox Scheduling with dynamic resource allocation},
   journal = {Journal of Network and Computer Applications}
 }
+
+@article{Yang2019,
+  doi = {10.1109/tsc.2019.2927339},
+  url = {https://doi.org/10.1109/tsc.2019.2927339},
+  year = {2019},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  pages = {1--1},
+  author = {Song Yang and Fan Li and Ramin Yahyapour and Xiaoming Fu},
+  title = {Delay-Sensitive and Availability-Aware Virtual Network Function Scheduling for {NFV}},
+  journal = {{IEEE} Transactions on Services Computing}
+}
+
+@article{Huang2019,
+  doi = {10.1109/tcc.2019.2915835},
+  url = {https://doi.org/10.1109/tcc.2019.2915835},
+  year = {2019},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  pages = {1--1},
+  author = {Meitian Huang and Weifa Liang and Yu Ma and Song Guo},
+  title = {Maximizing Throughput of Delay-Sensitive {NFV}-Enabled Request Admissions via Virtualized Network Function Placement},
+  journal = {{IEEE} Transactions on Cloud Computing}
+}
